--- a/frontend/src/css/mapbox.css
+++ b/frontend/src/css/mapbox.css
@@ -1,10 +1,15 @@
 .mapContainer {
   position: absolute;
-  top: 0;
+  top: 0px;
   right: 0;
   left: 0;
   bottom: 0;
+  z-index: -1;
+  /* width: 100%; 
+  height: 100%; */
 }
+
+
 /* 
 @media screen and (max-width: 420px) {
   position: absolute;
