--- a/frontend/src/css/mapbox.css
+++ b/frontend/src/css/mapbox.css
@@ -4,11 +4,15 @@
   right: 0;
   left: 0;
   bottom: 0;
-  z-index: -1;
-  /* width: 100%; 
-  height: 100%; */
+  z-index: -2;
 }
 
+.geocoder {
+  position: relative; 
+  width: 30vw; 
+  top: -47px; 
+  left: 78px; 
+}
 
 /* 
 @media screen and (max-width: 420px) {
