--- a/frontend/src/css/mapbox.css
+++ b/frontend/src/css/mapbox.css
@@ -4,10 +4,8 @@
   right: 0;
   left: 0;
   bottom: 0;
-  z-index: -2;
+  z-index: -9999999999;
 }
-
-
 
 /* @media screen and (max-width: 420px) {
   position: absolute;
@@ -16,6 +14,3 @@
   left: 0;
   bottom: 0;
 } */
-
-
-
