--- a/frontend/src/css/nav_modal.css
+++ b/frontend/src/css/nav_modal.css
@@ -1,18 +1,18 @@
 .nav-container {
   position: absolute;
-  width: 320px;
-  height: 100%;
+  width: 310px;
+  height: 75%;
   background-color: white;
   flex-direction: column;
-  transition: opacity 0.3s ease 0s, transform 0.6s ease-in 0s;
+  transition: opacity 0.3s ease 0s, transform 0.6s ease-in-out 0s;
   float: left;
 }
 
 .nav-header {
   display: flex;
   padding: 12px;
-  border: 3px solid red;
   align-items: center;
+  border-bottom: 1px solid lightgrey;
 }
 
 .nav-header h2 {
@@ -20,7 +20,41 @@
   justify-content: center;
   margin-left: 10px;
   font-size: 25px;
-  border: 3px solid blue;
+}
+
+.nav-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 25px;
+}
+
+.nav-link {
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 15px;
+  border-bottom: 1px solid darkgrey;
+  color: black;
+  width: 100%;
+}
+
+.nav-users {
+}
+
+.nav-venues {
+}
+
+.nav-login {
+}
+
+.nav-signup {
+}
+
+.navback-icon {
+  margin-left: auto;
+  cursor: pointer;
 }
 
 .modal-background {
@@ -32,15 +66,6 @@
   background: rgba(0, 0, 0, 0.7);
   z-index: 10;
 }
-
-/* .modal-child {
-  margin-left: auto;
-  transition: opacity 0.3s ease 0s, transform 0.3s ease 0s;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
-
 .modal-container {
   display: flex;
   width: 100%;
