--- a/frontend/src/css/user_index.css
+++ b/frontend/src/css/user_index.css
@@ -1,13 +1,15 @@
-.user-index-header {
+.user-header {
     display: block; 
     padding: 20px; 
     border-bottom: 1px solid lightgray;
+    text-decoration: none; 
 }
 
-.user-index-header h1 {
+.user-header h1 {
     display: flex; 
     justify-content: center;
     font-size: 25px;
+    text-decoration: none;
 }
 
 .user-list-items-outer {
