Add menu icon to other pages

--- a/frontend/src/css/user_index.css
+++ b/frontend/src/css/user_index.css
@@ -11,6 +11,19 @@
     font-size: 25px;
     text-decoration: none;
 }
+.menu-icon-other {
+  margin-left: 15px;
+  border-radius: 4px;
+  background-color: white;
+  /* padding: 9px 8px 10px 8px; */
+  margin-top: 5px;
+  color: light-grey;
+  fill: #757575;
+  position: absolute;
+}
+.menu-icon-other:hover {
+    cursor: pointer;
+}
 
 .user-list-items-outer {
     display: block; 
