--- a/frontend/src/css/venue_index.css
+++ b/frontend/src/css/venue_index.css
@@ -9,3 +9,30 @@
     margin-top: 20px;
     padding-bottom: 20px; 
 }
+
+.venue-name {
+    font-size: larger;
+    font-weight: bold;
+    padding-bottom: 10px;
+
+}
+
+.venue-list-info {
+    padding-left: 30px; 
+}
+
+.venue-type {
+    padding-bottom: 5px;
+}
+
+.venue-rating {
+    padding-bottom: 5px;
+}
+
+.venue-availabilty {
+    padding-bottom: 5px;
+}
+
+.venue-current-user {
+    padding-bottom: 5px;
+}
