--- a/frontend/src/css/signup.css
+++ b/frontend/src/css/signup.css
@@ -4,10 +4,6 @@
     position: relative;
     top: 50px;
     align-items: center;
-    border-style: solid;
-    border-width: 1px;
-    border-color: lightgrey;
-    border-radius: 10px;
     width: 40%;
     margin-left: auto;
     margin-right: auto;
@@ -15,12 +11,18 @@
 }
 
 .signup-form {
+    margin-bottom: 50px;
+    padding: 20px; 
+    border-style: solid;
+    border-width: 1px;
+    border-color: lightgrey;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
 
 .signup-buttons {
@@ -49,11 +51,11 @@
 }
 
 .signup-button {
-    margin: 10px 10px 10px 10px;
+    margin: 5px 10px 10px 10px;
     color: white;
     background-color:#4267B2;
     border-radius: 5px;
-    padding-top: 5px;
+    /* padding-top: 5px; */
     padding-bottom: 5px;
     font-size: 18px;
     font-family: Verdana;
