--- a/frontend/src/css/nav_modal.css
+++ b/frontend/src/css/nav_modal.css
@@ -42,11 +42,6 @@
   width: 100%;
 }
 
-.nav-users {
-}
-
-.nav-venues {
-}
 .login-buttons {
   width: -webkit-fill-available;
   padding: 10px 0px 10px 10px
@@ -55,13 +50,13 @@
 
 .nav-login {
   padding-right: inherit;
-    padding-left: 0px
+    padding-left: 17px;
 
 }
 
 .nav-signup {
   padding-right: inherit;
-  padding-left: 0px
+    padding-left: 17px;
 }
 
 .logout-button {
