--- a/frontend/src/css/user_index.css
+++ b/frontend/src/css/user_index.css
@@ -1,16 +1,28 @@
-.user-header {
-    display: block; 
-    padding: 20px; 
-    border-bottom: 1px solid lightgray;
-    text-decoration: none; 
+.user-header-container {
+  display: flex;
+  padding: 20px;
+  border-bottom: 1px solid lightgray;
+  text-decoration: none;
+  justify-content: center;
 }
 
-.user-header h1 {
-    display: flex; 
-    justify-content: center;
-    font-size: 25px;
-    text-decoration: none;
+.user-header {
+  display: flex;
+  font-size: 25px;
+  text-decoration: none;
+  width: 50%;
 }
+
+.user-search-container {
+  display: flex;
+  flex-direction: row;
+  width: 40%;
+}
+
+.user-search-container input {
+  margin-left: 8%;
+}
+
 .menu-icon-other {
   margin-left: 15px;
   border-radius: 4px;
@@ -21,13 +33,13 @@
   position: absolute;
 }
 .menu-icon-other:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .user-list-items-outer {
-    display: block; 
-    flex-direction: row; 
-    /* flex-wrap: wrap;  */
+  display: block;
+  flex-direction: row;
+  /* flex-wrap: wrap;  */
 }
 /* .user-list-items-inner {
     display: block; 
@@ -36,60 +48,59 @@
 } */
 
 .user-list-items {
-    display: flex;
-    margin-left: 10vw;
-    margin-right: 10vw;
-    padding-left: 25px;
-    padding-right: 25px;
-    margin-top: 20px;
-    padding-bottom: 20px; 
-    border-bottom: 1px solid lightgray;
-    /* flex-basis: 50%; */
-    
+  display: flex;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  padding-left: 25px;
+  padding-right: 25px;
+  margin-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid lightgray;
+  /* flex-basis: 50%; */
 }
 
 .user-photo {
-    display: block;
-    /* flex-basis: 25%;  */
-    border: 1px solid lightgray; 
-    margin-right: 30px;
-    height: 150px; 
-    /* width: 150px;   */
+  display: block;
+  /* flex-basis: 25%;  */
+  border: 1px solid lightgray;
+  margin-right: 30px;
+  height: 150px;
+  /* width: 150px;   */
 }
 
 .user-photo img {
-    height: 150px; 
-    width: 150px; 
+  height: 150px;
+  width: 150px;
 }
 
 .user-info {
-    display: block;
-    flex-direction: column;
-    /* flex-basis: 75%; */
+  display: block;
+  flex-direction: column;
+  /* flex-basis: 75%; */
 }
 
 .user-username {
-    color: black; 
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: 900;
+  color: black;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 900;
 }
 
 .user-username:hover {
-    /* text-decoration: underline; */
-    color: rgb(34, 34, 175);
+  /* text-decoration: underline; */
+  color: rgb(34, 34, 175);
 }
 
 .username-outer {
-    padding-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 .performer-type {
-    padding-bottom: 10px;
-    font-size: 15px;
+  padding-bottom: 10px;
+  font-size: 15px;
 }
 
 .bio {
-    padding-bottom: 10px;
-    font-size: 15px;
+  padding-bottom: 10px;
+  font-size: 15px;
 }
