Clean up code and style stars

--- a/frontend/src/css/venue_index.css
+++ b/frontend/src/css/venue_index.css
@@ -48,8 +48,8 @@
     margin-left: -30px;
 }
 
-.rating-stars:focus {
-    outline: none;
+.react-stars:focus {
+    outline: transparent;
 }
 
 .venue-rating {
