--- a/frontend/src/css/venue_index.css
+++ b/frontend/src/css/venue_index.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     margin-left: 10vw;
     margin-right: 10vw;
-    padding-left: 25px;
+    padding-left: 45px;
     padding-right: 25px;
     margin-top: 20px;
     padding-bottom: 10px; 
@@ -23,9 +23,13 @@
 .venue-pic {
     display: block; 
     flex-basis: 50%;
+    height: 250px; 
+    padding-bottom: 15px;
+}
+.venue-pic img {
     border: 1px solid lightgray; 
     height: 250px; 
-    /* width: 300px;  */
+    /* width: 350px;  */
 }
 
 .venue-name {
@@ -97,10 +101,10 @@
     border: 1px solid lightgray; 
     border-radius: 4px;
     font-family: "Nunito Sans", sans-serif;
-    padding: 5px; 
+    padding: 8px; 
     box-shadow: lightgray 0px 0px 5px 0px;
     margin-left: -30px;
-
+    margin-top: 20px; 
 }
 
 .submit {
