--- a/frontend/src/css/venue_index.css
+++ b/frontend/src/css/venue_index.css
@@ -27,9 +27,16 @@
     padding-bottom: 15px;
 }
 .venue-pic img {
+    border-radius: 4px;
     border: 1px solid lightgray; 
     height: 250px; 
     /* width: 350px;  */
+}
+
+@media screen and (min-width: 1445px) {
+    .venue-pic {
+        display: none; 
+    }
 }
 
 .venue-name {
@@ -105,6 +112,7 @@
     box-shadow: lightgray 0px 0px 5px 0px;
     margin-left: -30px;
     margin-top: 20px; 
+    margin-right: 10px; 
 }
 
 .submit {
