--- a/frontend/src/css/app.css
+++ b/frontend/src/css/app.css
@@ -90,5 +90,5 @@ video {
 .app-container {
   max-width: 1920px;
   margin: 0 auto;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
