--- a/frontend/src/css/signup.css
+++ b/frontend/src/css/signup.css
@@ -7,8 +7,14 @@
     width: 40%;
     margin-left: auto;
     margin-right: auto;
-    font-family: Verdana;
+    /* font-family: Verdana; */
 }
+
+/* .user-header-h1 {
+  font-family: 'Megrim', cursive; 
+  font-weight: 900; 
+  font-size: 35px; 
+} */
 
 .signup-form {
     margin-bottom: 50px;
@@ -20,15 +26,15 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
     /* margin-top: 30px; */
 }
 
 .signup-buttons {
     display: flex;
     flex-direction: column;
-    padding: 10px 10px 10px 10px;
+    /* padding: 10px 10px 10px 10px; */
 }
 
 .signup-title {
@@ -39,27 +45,34 @@
 }
 
 .signup-desc {
+    color: rgb(61, 61, 61); 
     font-size: 18px;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .signup-description {
+    color: rgb(61, 61, 61); 
     font-size: 14px;
     text-align: center;
     margin-bottom: 20px;
 }
 
-.signup-button {
-    margin: 5px 10px 10px 10px;
+#signup-button {
+    /* margin: 5px 0px 0px 0px; */
+    width: 36vw; 
+    border: none; 
     color: white;
     background-color:#4267B2;
-    border-radius: 5px;
-    /* padding-top: 5px; */
-    padding-bottom: 5px;
+    border-radius: 3px;
+    padding-top: 8px;
+    padding-bottom: 8px;
     font-size: 18px;
     font-family: Verdana;
     font-weight: 600;
+    /* margin: 0px; 
+    margin-right: 15px;  */
+    /* padding: 20px; */
 }
 
 button:hover {
@@ -72,16 +85,36 @@ button:hover {
     padding-left: 10px;
     margin-bottom: 20px;
     width: 35vw;
+    border: 1px solid lightgray; 
+    border-radius: 3px;
+}
+
+.signup-form select:focus {
+    outline: none; 
 }
 
 .signup-form select {
     padding: 5px 5px 5px 5px;
     margin-bottom: 20px;
-    width: 36vw;
+    width: 36.5vw;
+    border: 1px solid lightgray; 
+    border-radius: 3px;
+    color: gray; 
+}
+
+.pic-upload-desc {
+    color: rgb(61, 61, 61); 
+    padding-bottom: 5px; 
 }
 
 #signup-profile {
-    width: 36vw;
+    width: 35vw; 
+    margin-right: -25px; 
+    /* border: none;  */
+}
+
+#signup-profile {
+    width: 35vw;
 }
 
 @media screen and (max-width: 600px) {
