--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -44,38 +44,50 @@
 .login-desc {
   font-size: 18px;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  color: rgb(61, 61, 61); 
+
 }
 
 .login-description {
   font-size: 14px;
   text-align: center;
   margin-bottom: 20px;
+  color: rgb(61, 61, 61); 
 }
 
 .login-buttons button {
-  margin: 10px 10px 10px 10px;
+  /* margin: 10px 10px 10px 10px; */
   color: white;
   background-color: #4267b2;
-  border-radius: 5px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  border-radius: 3px;
+  padding-top: 8px;
+  padding-bottom: 8px;
   font-size: 18px;
-  font-family: Verdana;
+  /* font-family: Verdana; */
   font-weight: 600;
+  border: none; 
+  padding-left: 10px;
+  margin-bottom: 15px;
+  width: 35.5vw; 
 }
 
 button:hover {
   cursor: pointer;
+  background-color: #22458a;
 }
 
 .login-form input {
+  margin-left: 10px; 
+  margin-right: 10px; 
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 10px;
   margin-bottom: 20px;
   display: inline-block;
-  width: 35vw;
+  width: 34vw;
+  border: 1px solid lightgray; 
+  border-radius: 3px;
 }
 
 .session-errors {
@@ -104,6 +116,7 @@ button:hover {
   display: flex; 
   justify-content: center;
   text-decoration: none;
+  padding-bottom: 20px; 
   color: rgb(61, 61, 61); 
   /* font-size: 14px; */
 
