--- a/frontend/src/css/venue_index.css
+++ b/frontend/src/css/venue_index.css
@@ -117,7 +117,7 @@
 .review-input {
     border: 1px solid lightgray; 
     border-radius: 4px;
-    font-family: "Nunito Sans", sans-serif;
+    font-family: "Roboto", sans-serif;
     padding: 8px; 
     box-shadow: lightgray 0px 0px 5px 0px;
     margin-left: -30px;
@@ -126,21 +126,22 @@
 }
 
 .submit {
-    padding: 5px; 
-    padding-left: 8px;
-    padding-right: 8px;
-    font-family: "Nunito Sans", sans-serif;
-    background: whitesmoke; 
-    border: 1px solid lightgray; 
+    padding: 8px; 
+    padding-left: 10px;
+    padding-right: 10px;
+    font-family: "Roboto", sans-serif;
+    background: #4267B2; 
+    color: white; 
+    border: 1px solid #4267B2; 
     border-radius: 4px;
     margin-bottom: 10px;
     margin-left: -30px;
-
+    margin-top: 5px; 
 }
 
 .submit:hover {
     cursor: pointer;
-    background: rgb(231, 231, 231);
+    background: #22458a;
 }
 .submit:focus {
     outline: none; 
