--- a/frontend/src/css/user_index.css
+++ b/frontend/src/css/user_index.css
@@ -22,7 +22,9 @@
 .user-search {
   display: flex;
   width: 50%;
-  border: 1px solid black;
+  border: 0.5px solid lightgray;
+  border-radius: 5px;
+  position: relative;
 }
 
 .user-search input {
