--- a/frontend/src/css/nav_modal.css
+++ b/frontend/src/css/nav_modal.css
@@ -56,7 +56,7 @@
 
 .nav-signup {
   padding-right: inherit;
-    padding-left: 17px;
+  padding-left: 17px;
 }
 
 .logout-button {
@@ -66,6 +66,9 @@
   border: transparent;
   font-size: 18px;
   font-family: "Nunito Sans", sans-serif;
+}
+.logout-button:hover {
+  cursor: pointer;
 }
 
 .navback-icon {
