--- a/frontend/src/css/user_index.css
+++ b/frontend/src/css/user_index.css
@@ -39,6 +39,20 @@
   outline: none;
 }
 
+.user-header-main {
+  display: block;
+  padding: 20px;
+  border-bottom: 1px solid lightgray;
+  text-decoration: none;
+}
+
+.user-header-main h1 {
+  display: flex;
+  justify-content: center;
+  font-size: 25px;
+  text-decoration: none;
+}
+
 .menu-icon-other {
   margin-left: 15px;
   border-radius: 4px;
@@ -112,8 +126,8 @@
 }
 
 .user-rating {
-    padding-bottom: 10px;
-    font-size: 15px;
+  padding-bottom: 10px;
+  font-size: 15px;
 }
 /* .review-star {
     background: yellow;
