--- a/frontend/src/css/engineers.css
+++ b/frontend/src/css/engineers.css
@@ -18,8 +18,8 @@
     flex-wrap: wrap;
     width: 820px;
     /* margin-left: 600px; */
-    margin-left: 15%;
-    margin-top: 30px;
+    margin-left: 8%;
+    margin-top: 8%;
 }
 
 .engineer {
