--- a/frontend/src/css/user_index.css
+++ b/frontend/src/css/user_index.css
@@ -106,6 +106,18 @@
   padding-bottom: 5px;
 }
 
+.like-button {
+  height: 30px; 
+  /* padding: 0 10px;  */
+  font-size: 14px;
+  background-color: transparent;
+  border-radius: 6px;
+  border: none; 
+}
+.like-button:focus {
+  outline: none;
+}
+
 @media screen and (max-width: 1060px) and (min-width: 900px) {
   .user-index-container {
     display: grid; 
