Fix user index likes, delete not fully working

--- a/frontend/src/css/user_index.css
+++ b/frontend/src/css/user_index.css
@@ -117,6 +117,10 @@
 .like-button:focus {
   outline: none;
 }
+.like-button:hover {
+  cursor: pointer;
+  color: red;
+}
 
 @media screen and (max-width: 1060px) and (min-width: 900px) {
   .user-index-container {
