--- a/frontend/src/css/user_show.css
+++ b/frontend/src/css/user_show.css
@@ -123,8 +123,43 @@
     border: 1px solid lightgray; 
     border-radius: 4px;
     margin: 5px; 
-    padding: 5px; 
-    padding-left: 8px;
+    padding: 8px; 
+    padding-left: 10px;
     margin-left: 10vw; 
     margin-right: 10vw;
+    display: flex; 
+}
+
+.commenter-img {
+    display: block; 
+    flex-basis: 5%;
+    align-self: center;
+}
+.commenter-img img {
+    display: flex; 
+    align-items: center;
+}
+
+.comment-info {
+    display: block; 
+    justify-content: space-between;
+    flex-basis: 90%;
+}
+
+.comment {
+    padding-top: 2px; 
+    padding-bottom: 2px; 
+}
+
+.comment-delete {
+    display: block; 
+    flex-basis: 5%;
+    justify-content: flex-end;
+    align-self: center;
+}
+
+.comment-delete-button {
+    background-color: transparent;
+    border: none; 
+    padding: 0px; 
 }
