--- a/frontend/src/css/splash.css
+++ b/frontend/src/css/splash.css
@@ -1,7 +1,7 @@
 .splash-container {
   display: flex;
   width: 100%;
-  margin: 0 auto;
+  /* margin: 0 auto; */
 }
 
 .splash-intro {
@@ -12,12 +12,49 @@
   align-items: center;
   border: 1px solid blue;
   z-index: 0;
+  border-bottom: 8px solid #222;
+}
+
+.splash-login {
+}
+
+.splash-link {
+  width: 84px;
+  height: 29px;
+  border: 2px solid #4267b2;
+  background-color: #4267b2;
+  padding-top: 8px;
+  border-radius: 3px;
+  margin-right: 3%;
+  text-align: center;
+  color: white;
+  text-decoration: none;
 }
 
 .splash-img {
   position: absolute;
   width: 100%;
   height: 55%;
+}
+
+.splash-header-container {
+  z-index: 10;
+  width: 100%;
+}
+
+.splash-header {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 20px;
+}
+
+.splash-h1 {
+  font-size: 50px;
+  font-weight: bold;
+  color: white;
+  font-family: "Megrim", cursive;
+  margin-left: 3%;
+  margin-top: -8px;
 }
 
 .background_img {
@@ -30,21 +67,13 @@
   align-items: center;
   flex-direction: column;
   z-index: 1;
-  margin-top: 20%;
+  margin-top: 15%;
   margin-right: 2%;
-  border: 1px solid red;
 }
 
-.intro-container h1 {
-  font-size: 50px;
-  font-weight: bold;
+.intro-container h2 {
+  font-size: 75px;
   color: white;
-  font-family: "Megrim", cursive;
-}
 
-.intro-container h3 {
-  font-size: 30px;
-  color: white;
-  font-weight: bold;
-  font-family: "Megrim", cursive;
+  font-family: "Montserrat", sans-serif;
 }
