--- a/frontend/src/css/user_index.css
+++ b/frontend/src/css/user_index.css
@@ -31,7 +31,7 @@
 .user-search input {
   margin-left: 15%;
   border: none;
-  border-color: trasparent;
+  border-color: transparent;
   width: 100%;
   font-size: 16px;
 }
