Add small styling fixes

--- a/frontend/src/css/venue_index.css
+++ b/frontend/src/css/venue_index.css
@@ -168,6 +168,10 @@
   text-decoration: underline;
 }
 
+.review-login {
+  padding-bottom: 10px;
+}
+
 .review-input {
   border: 1px solid lightgray;
   border-radius: 4px;
