Fix search bar css

--- a/frontend/src/css/venue_index.css
+++ b/frontend/src/css/venue_index.css
@@ -28,9 +28,9 @@
 }
 
 .user-search input {
-  margin-left: 12%;
+  margin-left: 35px;
   border: none;
-  border-color: trasparent;
+  border-color: transparent;
   width: 100%;
   font-size: 16px;
 }
