--- a/frontend/src/css/user_index.css
+++ b/frontend/src/css/user_index.css
@@ -30,7 +30,7 @@
 
 .user-search input {
   border: none;
-  border-color: trasparent;
+  border-color: transparent;
   width: 100%;
   font-size: 16px;
 }
