--- a/frontend/src/css/user_show.css
+++ b/frontend/src/css/user_show.css
@@ -25,7 +25,7 @@
 .user-search-show input {
   margin-left: 15%;
   border: none;
-  border-color: trasparent;
+  border-color: transparent;
   width: 100%;
   font-size: 16px;
 }
