--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -18,6 +18,23 @@
     font-size: 25px; 
 }
 
+.login-home-link {
+  color: black; 
+  /* cursor: pointer; */
+  text-decoration: none;
+}
+
+.login-page-container {
+  background-image: url("../img/form_background.png");
+  background-size: cover;
+  background-color: rgb(31, 31, 31); 
+  padding-bottom: 300px;
+  /* right: 50px;  */
+  width: 100%;
+  height: 60vh;
+  position: relative;
+}
+
 .login-page {
   display: flex;
   flex-direction: column;
@@ -32,6 +49,7 @@
   margin-left: auto;
   margin-right: auto;
   /* font-family: Verdana; */
+  background-color: white;
 }
 
 .login-form {
