--- a/frontend/src/css/signup.css
+++ b/frontend/src/css/signup.css
@@ -1,3 +1,14 @@
+.signup-page-container {
+  background-image: url("../img/form_background.png");
+  background-size: cover;
+  background-color: rgb(31, 31, 31); 
+  padding-bottom: 300px;
+  /* right: 50px;  */
+  width: 100%;
+  height: 60vh;
+  position: relative;
+}
+
 .signup-page {
   display: flex;
   flex-direction: column;
