--- a/frontend/src/css/user_show.css
+++ b/frontend/src/css/user_show.css
@@ -7,6 +7,7 @@
     padding: 20px;
     border-bottom: 1px solid lightgray;
     text-decoration: none;
+    background-color: white;
 }
 
 .user-header-h1 {
