--- a/frontend/src/css/mapbox.css
+++ b/frontend/src/css/mapbox.css
@@ -1,10 +1,15 @@
-.mapContainer {
-  position: absolute;
+.map-container {
+  /* position: absolute;
   top: 0px;
   right: 0;
   left: 0;
   bottom: 0;
-  z-index: -9999999999;
+  z-index: -9999999999; */
+
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 /*
